level2-2 Calculator 클래스를 이용해서 계산하도록 App 코드 수정