@@ -43,7 +43,7 @@ public class App {
     public static void main(String[] args) {
 
         Scanner scanner = new Scanner(System.in);
-        LinkedList<Double> results = new LinkedList<>();
+        Calculator calculator = new Calculator();
 
         while (true) {
 
@@ -53,52 +53,28 @@ public class App {
             int secondNum = scanner.nextInt();
             scanner.nextLine(); // 줄먹기
             System.out.print("사칙연산 기호를 입력하세요: ");
-            String operation = scanner.nextLine(); // String 타입으로 받은 문자의 처음만 유효하다.
+            String operator = scanner.nextLine(); // String 타입으로 받은 문자의 처음만 유효하다.
 
-            double result;
-            switch (operation) {
-                case "+":
-                    result = firstNum + secondNum;
-                    break;
-                case "-":
-                    result = firstNum - secondNum;
-                    break;
-                case "*":
-                    result = firstNum * secondNum;
-                    break;
-                case "/":
-                    if (secondNum == 0) {
-                        System.out.println("입력된 분모(secondNum)는 " + secondNum + "입니다. 0으로 나눌 수 없습니다.");
-                        continue;
-                    } else {
-                        result = firstNum / (double) secondNum;
-                        break;
-                    }
-
-                default:
-                    System.out.println("[" + operation + "]" + "은 연산기호가 아닙니다.");
-                    continue;
-            }
-
-            results.add(result);
+            double result = calculator.calculate(firstNum, secondNum, operator);
             System.out.println("사칙연산 결과는: " + result + "입니다.");
 
             System.out.print("가장 먼저 저장된 연산 결과를 삭제하시겠습니까? 아닐 시 enter. (\"remove\" 입력 시 삭제) : ");
             if (scanner.nextLine().equals("remove")) {
-                Double removeValue = results.removeFirst();
+                Double removeValue = calculator.getResults().remove(0);
                 System.out.println("가장 먼저 입력한 값이 삭제되었습니다. 삭제된 값: " + removeValue);
             }
 
             // 리스트에 담긴 정보 모두 조회
             System.out.print("저장된 연산결과를 조회하시겠습니까? 아닐 시 enter. (\"inquiry\" 입력 시 조회) : ");
             if (scanner.nextLine().equals("inquiry")) {
-                for (Double value : results) {
+                for (Double value : calculator.getResults()) {
                     System.out.print("[" + value + "] ");
                 }
+                System.out.println();
             }
 
             // while문 종료 확인
-            System.out.print("계산을 종료 하시겠습니까? 아닐 시 enter. (exit 입력 시 종료) : ");
+            System.out.print("계산을 종료 하시겠습니까? 아닐 시 enter. (\"exit\" 입력 시 종료) : ");
             if (scanner.nextLine().equals("exit")) {
                 System.out.println("프로그램을 종료합니다.");
                 return;
